# z2p-axum

./: .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  build.sh  configuration.yaml  docker-config.sh.example  readme.md  run.sh
.cargo/: config.toml
configuration/: base.yaml  local.yaml  production.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260124_154523_create_subscriptions_table.rs  m20260408_131915_add_status_to_subscriptions.rs
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/entity/: mod.rs  prelude.rs  subscription.rs  subscription_tokens.rs  subscriptions.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
