[package]
name = "z2p-axum"
version = "0.1.0"
edition = "2024"

[lib]
name = "z2p_axum" 
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p-axum"

[dev-dependencies]
migration = { path = "./migration" }


[dependencies]
axum = "0.8.8"
reqwest = "0.13.2"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",           # MySQL 驱动
    "runtime-tokio-native-tls",  # 改用 native-tls，兼容性更好
    "macros",               # 实体宏
    "with-chrono",          # 启用 Chrono 支持（用于 DateTime）
    "with-uuid",            # 启用 UUID 支持
    "debug-print",          # 调试输出（可选）
] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

config = "0.15.19"

tracing = "0.1.44"
dotenvy = "0.15.7"  # 用于加载 .env 文件
sea-orm-migration = "1.1.19"

tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }

secrecy = { version = "0.10.3", features = ["serde"] }

tracing-bunyan-formatter = "0.3.10"
tracing-log= "0.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

serde-aux = "4.7.0"