[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = "1.1.19"
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
